Implementations: - Added background color to visibility toggle on PasswordInput to stop eyeball from covering part of password. - Fixed grammar issues in documentation of RegistrationError.

--- a/app/components/misc/password-input/PasswordInput.css
+++ b/app/components/misc/password-input/PasswordInput.css
@@ -10,12 +10,23 @@
     margin: 0;
 }
 
+#visibility-toggle-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    background-color: #4e4e4e;
+    border-left: 2px solid #000000;
+}
+
 .toggle-visibility {
     position: absolute;
     cursor: pointer;
-    right: 5%;
-    top: 50%;
-    transform: translateY(-50%);
+    margin-right: 2px;
+    right: 0;
+    top: 2px;
+    bottom: 2px;
     display: flex;
     align-items: center;
 }
@@ -41,36 +52,93 @@
 }
 
 @media (min-width: 320px) {
+    .password-container input {
+        padding-right: 34px;
+    }
+
+    .toggle-visibility {
+        width: 32px;
+    }
+
     .toggle-visibility .material-symbols-outlined {
         font-size: 16px;
     }
 }
 
 @media (min-width: 425px) {
+    .password-container input {
+        padding-right: 42px;
+    }
+    .toggle-visibility {
+        width: 40px;
+    }
+
     .toggle-visibility .material-symbols-outlined {
         font-size: 20px;
     }
 }
 
 @media (min-width: 1024px) {
+    .password-container input {
+        padding-right: 50px;
+    }
+
+    .toggle-visibility {
+        width: 48px;
+    }
+
     .toggle-visibility .material-symbols-outlined {
         font-size: 24px;
     }
 }
 
 @media (min-width: 1440px) {
+    .password-container input {
+        padding-right: 34px;
+    }
+
+    .toggle-visibility {
+        width: 32px;
+    }
+
     .toggle-visibility .material-symbols-outlined {
         font-size: 18px;
     }
 }
 
+@media (min-width: 1920px) {
+    .password-container input {
+        padding-right: 42px;
+    }
+
+    .toggle-visibility {
+        width: 40px;
+    }
+}
+
 @media (min-width: 2560px) {
+    .password-container input {
+        padding-right: 50px;
+    }
+
+    .toggle-visibility {
+        width: 48px;
+    }
+
     .toggle-visibility .material-symbols-outlined {
         font-size: 24px;
     }
 }
 
 @media (min-width: 3840px) {
+    .password-container input {
+        padding-right: 58px;
+    }
+
+    .toggle-visibility {
+        width: 56px;
+    }
+
     .toggle-visibility .material-symbols-outlined {
         font-size: 32px;
     }
